@@ -7,6 +7,9 @@
 #include "boost/spirit/actor.hpp"
 #include "gme/GME.h"
 
+#include <locale>
+#include <fstream>
+
 namespace actions
 {
 //=============================================================================
@@ -170,21 +173,50 @@ CUTS_Scatter_To_Picml::~CUTS_Scatter_To_Picml (void)
 bool CUTS_Scatter_To_Picml::
 run (const std::string & filename, CUTS_Deployment_Map & deployment)
 {
+  typedef char char_t;
+  typedef boost::spirit::file_iterator <char_t>  iterator_t;
+    
   // Get an iterator to the beginning of the file.
-  boost::spirit::file_iterator < > first (filename);
+  iterator_t first (filename);
 
   if (!first)
     return false;
 
   // Get an iterator to the end of the file.
-  boost::spirit::file_iterator < > last = first.make_end ();
+  iterator_t last = first.make_end ();
   
   // Parse the select file.
   CUTS_Scatter_To_Picml_Parser parser (deployment);
 
-  boost::spirit::parse_info <
-    boost::spirit::file_iterator < > > result =
+  boost::spirit::parse_info <iterator_t> result =
     boost::spirit::parse (first, last, parser);
 
-  return result.hit;
+  if (result.full)
+    return true;
+  
+  // We did not parse all of the file. So we need to make 
+  // sure there is no more input.
+  std::ifstream infile;
+  infile.open (filename.c_str (), std::ios_base::in);
+
+  if (!infile.is_open ())
+    return false;
+
+  // Move to the position where the parser stopped.
+  std::locale loc ("C");
+  infile.seekg (result.length);
+  
+  char ch;
+  
+  // Read each individual character until we get to the end of 
+  // the file. If we find a non-whitespace character, then the 
+  // parser failed.
+  do 
+  { 
+    ch = infile.get ();
+  } while (std::isspace (ch, loc));
+
+  // Close the input file.
+  infile.close ();
+  return ch == std::char_traits <char>::eof ();
 }
